--- a/MainPage.HTML
+++ b/MainPage.HTML
@@ -5,7 +5,9 @@
             Test Page
         </title>
     </head>
-    <body>
-        Test Text
+    <body style="background-color: black;">
+			<p style="color: white;">
+				Jaden's Domain
+			</p>
     </body>
 </html>
