--- a/MainPage.HTML
+++ b/MainPage.HTML
@@ -6,8 +6,11 @@
         </title>
     </head>
     <body style="background-color: black;">
-			<p style="color: white;">
+			<p style="color: lime; font-size:25px; font-family:sans-serif; text-align: center;">
 				Jaden's Domain
 			</p>
+            <p>
+                # add links here
+            </p>
     </body>
 </html>
