Upgraded HTML (Added working links)

--- a/MainPage.HTML
+++ b/MainPage.HTML
@@ -9,8 +9,11 @@
 			<p style="color: lime; font-size:25px; font-family:sans-serif; text-align: center;">
 				Jaden's Domain
 			</p>
-            <p>
-                # add links here
-            </p>
+            <button style="color: lime; background-color: black; text-align: center;" ;onclick="window.location.href='https://www.google.com'">
+                Google
+            </button>
+            <button style="color: lime; background-color: black; text-align: center;" ;onclick="window.location.href='https://familyportal.renweb.com'">
+                Renweb
+            </button>
     </body>
 </html>
