--- a/index.HTML
+++ b/index.HTML
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>
-            Test Page
+            Jaden's Domain
         </title>
     </head>
     <body style="background-color: black;">
 			<p style="color: lime; font-size:25px; font-family:sans-serif; text-align: center;">
 				Jaden's Domain
 			</p>
-            <button style="color: lime; background-color: black; text-align: center;" ;onclick="window.location.href='https://www.google.com'">
+            <button style="color: lime; background-color: black; text-align: center;" ;onclick="window.location.href='chrome://newtab'">
                 Google
             </button>
             <button style="color: lime; background-color: black; text-align: center;" ;onclick="window.location.href='https://familyportal.renweb.com'">
