Added Favicon to Website

--- a/index.HTML
+++ b/index.HTML
@@ -4,15 +4,18 @@
         <title>
             Jaden's Domain
         </title>
+        <link rel="icon" type="image/png" href="Void Star.png">
+        </head>
+        </head>
     </head>
     <body style="background-color: black;">
 			<p style="color: lime; font-size:25px; font-family:sans-serif; text-align: center;">
 				Jaden's Domain
 			</p>
-            <button style="color: lime; background-color: black; text-align: center;" ;onclick="window.location.href='chrome://newtab'">
+            <button style="color: lime; background-color: black; text-align: center;" onclick="window.location.href='chrome://newtab'">
                 Google
             </button>
-            <button style="color: lime; background-color: black; text-align: center;" ;onclick="window.location.href='https://familyportal.renweb.com'">
+            <button style="color: lime; background-color: black; text-align: center;" onclick="window.location.href='https://familyportal.renweb.com'">
                 Renweb
             </button>
     </body>
