Added more links

--- a/index.HTML
+++ b/index.HTML
@@ -5,8 +5,6 @@
             Jaden's Domain
         </title>
         <link rel="icon" type="image/png" href="Void Star.png">
-        </head>
-        </head>
     </head>
     <body style="background-color: black;">
 			<p style="color: lime; font-size:25px; font-family:sans-serif; text-align: center;">
@@ -17,6 +15,15 @@
             </button>
             <button style="color: lime; background-color: black; text-align: center;" onclick="window.location.href='https://familyportal.renweb.com'">
                 Renweb
+            </button>
+            <button style="color: lime; background-color: black; text-align: center;" onclick="window.location.href='https://drive.google.com/drive/my-drive'">
+                Drive
+            </button>
+            <button style="color: lime; background-color: black; text-align: center;" onclick="window.location.href='https://calendar.google.com/calendar/u/0/r'">
+                Calender
+            </button>
+            <button style="color: lime; background-color: black; text-align: center;" onclick="window.location.href='https://github.com'">
+                Github
             </button>
     </body>
 </html>
