Added test picture to use as background

--- a/index.HTML
+++ b/index.HTML
@@ -25,5 +25,6 @@
             <button style="color: lime; background-color: black; text-align: center;" onclick="window.location.href='https://github.com'">
                 Github
             </button>
+            <link type="image/png" href="Void Star.png">
     </body>
 </html>
